syntax = "proto3";

package notifications;

service NotificationService {
  rpc SendNotification (NotificationRequest) returns (NotificationResponse) {}
  rpc GetNotifications (UserRequest) returns (NotificationList) {}
}

message NotificationRequest {
  string user_id = 1;
  string title = 2;
  string content = 3;
  string type = 4;
}

message NotificationResponse {
  bool success = 1;
  string message = 2;
  string notification_id = 3;
}

message UserRequest {
  string user_id = 1;
}

message Notification {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string content = 4;
  string type = 5;
  bool read = 6;
  string created_at = 7;
}

message NotificationList {
  repeated Notification notifications = 1;
}

service ExtractService {
  rpc GenerateExtract (ExtractRequest) returns (ExtractResponse) {}
  rpc GetExtract (ExtractIdRequest) returns (Extract) {}
}

message ExtractRequest {
  string user_id = 1;
  string reservation_id = 2;
  string format = 3; // pdf, csv, etc.
}

message ExtractResponse {
  bool success = 1;
  string message = 2;
  string extract_id = 3;
}

message ExtractIdRequest {
  string extract_id = 1;
}

message Extract {
  string id = 1;
  string user_id = 2;
  string reservation_id = 3;
  string format = 4;
  string url = 5;
  string created_at = 6;
}
